SCR #181300 - fixed gap search

--- a/src/modules/games/components/search/styles/themes/_default.scss
+++ b/src/modules/games/components/search/styles/themes/_default.scss
@@ -200,10 +200,6 @@
                 grid-template-columns: repeat(2, minmax(0, 1fr));
             }
 
-            @include mq.min(900) {
-                grid-gap: 0 ef.get-value($themeDefault, 'listGap');
-            }
-
             &-btn {
                 display: flex;
                 align-items: center;
